--- a/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
@@ -2,19 +2,18 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
     
+    <!-- MainWindow -->
     <Color x:Key="col_MainWindow.Background">#f2f2f4</Color>
-    <Color x:Key="col_ListBoxBackground">#294966</Color>
-    <Color x:Key="col_InactiveListBoxItem">#1780ac</Color>
-    <Color x:Key="col_ActiveListBoxItem">#a2bddb</Color>
-    <Color x:Key="col_OddRow">#c6cdda</Color>
-    <Color x:Key="col_EvenRow">#dce1e9</Color>
+    <Color x:Key="col_MainWindow.BackgroundAlternative">#294966</Color>
+
+    <Color x:Key="col_MainWindow.Foreground">#a2bddb</Color>
+    <Color x:Key="col_MainWindow.ForegroundAlternative">#1780ac</Color>
 
     <SolidColorBrush x:Key="br_MainWindow.Background" Color="{StaticResource col_MainWindow.Background}" />
-    <SolidColorBrush x:Key="br_ListBoxBackground" Color="{StaticResource col_ListBoxBackground}" />
-    <SolidColorBrush x:Key="br_InactiveListBoxItem" Color="{StaticResource col_InactiveListBoxItem}" />
-    <SolidColorBrush x:Key="brd_InactiveListBoxItem" Color="{DynamicResource col_InactiveListBoxItem}" />
-    <SolidColorBrush x:Key="br_ActiveListBoxItem" Color="{StaticResource col_ActiveListBoxItem}" />
-    <SolidColorBrush x:Key="br_OddRow" Color="{StaticResource col_OddRow}" />
-    <SolidColorBrush x:Key="br_EvenRow" Color="{StaticResource col_EvenRow}" />
+    <SolidColorBrush x:Key="br_MainWindow.BackgroundAlternative" Color="{StaticResource col_MainWindow.BackgroundAlternative}" />
+    <SolidColorBrush x:Key="br_MainWindow.Foreground" Color="{StaticResource col_MainWindow.Foreground}" />
+    <SolidColorBrush x:Key="br_MainWindow.ForegroundAlternative" Color="{StaticResource col_MainWindow.ForegroundAlternative}" />
+
+    <SolidColorBrush x:Key="brd_MainWindow.ForegroundAlternative" Color="{DynamicResource col_MainWindow.ForegroundAlternative}" />
 
 </ResourceDictionary>
