--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -1,7 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
-    <DataTemplate x:Key="dt_ImportStage">
+
+    <!-- ImportFile -->
+    <DataTemplate x:Key="dt_ImportFile">
         <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.1*" MinHeight="50" />
@@ -11,7 +13,7 @@
             <Border Margin="10,5" Height="Auto">
                 <TextBlock FontSize="24"
                        FontWeight="DemiBold"
-                       Foreground="{StaticResource br_ListBoxBackground}"
+                       Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
                        Text="{Binding Header}"
                        ></TextBlock>
             </Border>
@@ -72,4 +74,84 @@
             </Grid>
         </Grid>
     </DataTemplate>
+
+
+
+    <!-- Employee Table -->
+    <DataTemplate x:Key="dt_IsActive">
+        <CheckBox IsChecked="{Binding IsActive}" 
+                  Style="{StaticResource st_TableCheckBox}"
+        />
+    </DataTemplate>
+
+    <DataTemplate x:Key="dt_IsSmoker">
+        <CheckBox IsChecked="{Binding IsSmoker}" 
+                  Style="{StaticResource st_TableCheckBox}"
+        />
+    </DataTemplate>
+
+    <DataTemplate x:Key="dt_ComboBoxCell">
+        <ComboBox ></ComboBox>
+    </DataTemplate>
+
+    <DataTemplate x:Key="dt_EmployeeTable">
+        <Grid Width="Auto" Height="Auto">
+            <DataGrid ItemsSource="{Binding Source={StaticResource EmployeeCollection}}"
+                      
+                      >
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Код" 
+                                    Width="80" 
+                                    Binding="{Binding Id}"
+                                    CanUserResize="False"
+                                    CellStyle="{StaticResource st_CenteredCell}"
+                                    IsReadOnly="True"
+                                    />
+                    <DataGridComboBoxColumn Header="Должность" 
+                                        ItemsSource="{Binding Source={StaticResource Appointments}}"     
+                                        SelectedItemBinding="{Binding Appointment}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180"
+                                        IsReadOnly="False" 
+                                        />
+                    <DataGridTextColumn Header="Сотрудник"  
+                                    MinWidth="240"
+                                    Binding="{Binding Name}" 
+                                    CellStyle="{StaticResource st_VerticalCenteredCell}"
+                                    IsReadOnly="True"
+                                    />
+                    <DataGridTemplateColumn Header="Работает" 
+                                        Width="70"
+                                        CellTemplate="{StaticResource dt_IsActive}"
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        CanUserSort="True"
+                                        SortMemberPath="IsActive"
+                                        />
+                    <DataGridComboBoxColumn Header="Зона ответственности"
+                                        ItemsSource="{Binding Source={StaticResource Positions}}"     
+                                        SelectedItemBinding="{Binding Appointment}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180" 
+                                        IsReadOnly="False" 
+                                        />
+                    <DataGridComboBoxColumn Header="Ранг" 
+                                        ItemsSource="{Binding Source={StaticResource Ranks}}"     
+                                        SelectedItemBinding="{Binding Rank}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180" 
+                                        IsReadOnly="False" 
+                                        />
+                    <DataGridTemplateColumn Header="Курит" Width="70"
+                                        CellTemplate="{StaticResource dt_IsSmoker}"
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        CanUserSort="True"
+                                        SortMemberPath="IsSmoker"
+                                        />
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </DataTemplate>
+
+
+
 </ResourceDictionary>
