--- a/Code/WorkSpeed.DesktopClient/Views/Design/DesignWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/Design/DesignWindow.xaml
@@ -26,7 +26,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="60" />
+                <RowDefinition Height="90" />
                 <RowDefinition Height="26"/>
                 <RowDefinition Height="3*" />
             </Grid.RowDefinitions>
@@ -61,9 +61,17 @@
                 <StackPanel Orientation="Vertical"
                             VerticalAlignment="Center"
                             >
-                    <ProgressBar Height="20" Background="{StaticResource br_MainWindow.Background}"></ProgressBar>
+                    <ProgressBar Height="20" 
+                                 Background="{StaticResource br_MainWindow.Background}"
+                                 Opacity="0"
+                                 >
+                                
+                    </ProgressBar>
                     <Border Margin="0">
-                        <TextBlock Text="{Binding Message}" VerticalAlignment="Top" />
+                        <TextBlock Text="{}}{Binding Message}" 
+                                   VerticalAlignment="Top"
+                                   HorizontalAlignment="Center"
+                                   />
                     </Border>
                 </StackPanel>
 
